# jeremychia

./: README.md
analysis/: GitHub_PR_Analysis.ipynb  README.md  achievement_bullets_20260222_094401.txt  performance_data_20260222_094401.json  performance_data_20260222_095542.json  professional_achievements_20260222_094401.md  professional_achievements_20260222_095542.md
analysis/docs/: README_Downloads.md
analysis/enhanced/: enhanced_pr_data_complete.csv  enhanced_pr_data_sample.csv  enhanced_pr_data_sample.json
analysis/original/: jeremychia_pr_contributions.csv
analysis/tools/: enhance_pr_data.py
github-pr-scraper/: .env.example  README.md  config.yaml  enhance_pr_data.py  pyproject.toml
github-pr-scraper/github_pr_scraper/: __init__.py  cli.py  cli_analyzer.py  config.py  exporter.py  models.py  scraper.py
github-pr-scraper/outputs/: github_pr_analysis_20260220_112938.csv  github_pr_analysis_report_20260220_112938.md  github_pr_analysis_report_20260220_113022.md  summary_github_pr_analysis_20260220_112938.csv
pr-analyser/: demo.sh  run-jeremychia-analysis.sh
pr-analyser-pat/: .env  .env.example  README.md  config.yaml.example  instructions.md  pyproject.toml
pr-analyser-pat/pr_analyser/: __init__.py  auth.py  cli.py  config.py  core.py  exporter.py  github_client.py  models.py  visualizer.py
pr-analyser-pat/pr_analyser/commands/: __init__.py  analyze.py  auth.py
pr-analyser-pat/tests/: conftest.py  test_analyzer.py  test_models.py
pr-analyser/pr_analyser/: analyzer.py  display.py
resume/: Resume 2025.01 - Jeremy Chia.docx  Resume 2025.01 - Jeremy Chia.md  feedback.md  resume-jeremy-chia.html  resume-jeremy-chia.md
